src/agentspec/spec_lang/AgentSpecParser.py
# Generated from AgentSpec.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AgentSpecParser ( Parser ):

    grammarFileName = "AgentSpec.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'rule'", "'trigger'", "'check'", "'enforce'", 
                     "'any'", "'true'", "'false'", "'end'", "':'", "','", 
                     "'('", "')'", "'{'", "'}'", "'.'", "'['", "']'", "'@'", 
                     "'='", "'!'", "<INVALID>", "'invoke_action'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'state_change'", "'before_action'", "'after_action'", 
                     "'finish'" ]

    symbolicNames = [ "<INVALID>", "RULE", "TRIGGER", "CHECK", "ENFORCE", 
                      "ANY", "TRUE", "FALSE", "END", "COLON", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "DOT", "LBRACK", "RBRACK", 
                      "AT", "EQ", "NOT", "PREDICATE", "INVOKE", "ENFORCEMENT", 
                      "WS", "IDENTIFIER", "STRING", "INTEGER", "FLOAT", 
                      "STATE_CHANGE", "BEFORE_ACTION", "AFTER_ACTION", "FINISH" ]

    RULE_program = 0
    RULE_rule = 1
    RULE_ruleClause = 2
    RULE_triggerClause = 3
    RULE_checkClause = 4
    RULE_enforceClause = 5
    RULE_event = 6
    RULE_kvPair = 7
    RULE_value = 8
    RULE_enforcement = 9
    RULE_actionInvoke = 10
    RULE_number = 11
    RULE_predicate = 12
    RULE_predicate_func = 13
    RULE_namespace = 14
    RULE_config = 15

    ruleNames =  [ "program", "rule", "ruleClause", "triggerClause", "checkClause", 
                   "enforceClause", "event", "kvPair", "value", "enforcement", 
                   "actionInvoke", "number", "predicate", "predicate_func", 
                   "namespace", "config" ]

    EOF = Token.EOF
    RULE=1
    TRIGGER=2
    CHECK=3
    ENFORCE=4
    ANY=5
    TRUE=6
    FALSE=7
    END=8
    COLON=9
    COMMA=10
    LPAREN=11
    RPAREN=12
    LBRACE=13
    RBRACE=14
    DOT=15
    LBRACK=16
    RBRACK=17
    AT=18
    EQ=19
    NOT=20
    PREDICATE=21
    INVOKE=22
    ENFORCEMENT=23
    WS=24
    IDENTIFIER=25
    STRING=26
    INTEGER=27
    FLOAT=28
    STATE_CHANGE=29
    BEFORE_ACTION=30
    AFTER_ACTION=31
    FINISH=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AgentSpecParser.EOF, 0)

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecParser.RuleContext)
            else:
                return self.getTypedRuleContext(AgentSpecParser.RuleContext,i)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = AgentSpecParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 32
                self.rule_()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(AgentSpecParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleClause(self):
            return self.getTypedRuleContext(AgentSpecParser.RuleClauseContext,0)


        def triggerClause(self):
            return self.getTypedRuleContext(AgentSpecParser.TriggerClauseContext,0)


        def checkClause(self):
            return self.getTypedRuleContext(AgentSpecParser.CheckClauseContext,0)


        def enforceClause(self):
            return self.getTypedRuleContext(AgentSpecParser.EnforceClauseContext,0)


        def END(self):
            return self.getToken(AgentSpecParser.END, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)




    def rule_(self):

        localctx = AgentSpecParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.ruleClause()
            self.state = 41
            self.triggerClause()
            self.state = 42
            self.checkClause()
            self.state = 43
            self.enforceClause()
            self.state = 44
            self.match(AgentSpecParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(AgentSpecParser.RULE, 0)

        def AT(self):
            return self.getToken(AgentSpecParser.AT, 0)

        def IDENTIFIER(self):
            return self.getToken(AgentSpecParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_ruleClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleClause" ):
                listener.enterRuleClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleClause" ):
                listener.exitRuleClause(self)




    def ruleClause(self):

        localctx = AgentSpecParser.RuleClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ruleClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(AgentSpecParser.RULE)
            self.state = 47
            self.match(AgentSpecParser.AT)
            self.state = 48
            self.match(AgentSpecParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TriggerClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRIGGER(self):
            return self.getToken(AgentSpecParser.TRIGGER, 0)

        def event(self):
            return self.getTypedRuleContext(AgentSpecParser.EventContext,0)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_triggerClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriggerClause" ):
                listener.enterTriggerClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriggerClause" ):
                listener.exitTriggerClause(self)




    def triggerClause(self):

        localctx = AgentSpecParser.TriggerClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_triggerClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(AgentSpecParser.TRIGGER)
            self.state = 51
            self.event()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CheckClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHECK(self):
            return self.getToken(AgentSpecParser.CHECK, 0)

        def predicate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecParser.PredicateContext)
            else:
                return self.getTypedRuleContext(AgentSpecParser.PredicateContext,i)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_checkClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCheckClause" ):
                listener.enterCheckClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCheckClause" ):
                listener.exitCheckClause(self)




    def checkClause(self):

        localctx = AgentSpecParser.CheckClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_checkClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(AgentSpecParser.CHECK)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.predicate()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 36700352) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnforceClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENFORCE(self):
            return self.getToken(AgentSpecParser.ENFORCE, 0)

        def enforcement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecParser.EnforcementContext)
            else:
                return self.getTypedRuleContext(AgentSpecParser.EnforcementContext,i)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_enforceClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnforceClause" ):
                listener.enterEnforceClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnforceClause" ):
                listener.exitEnforceClause(self)




    def enforceClause(self):

        localctx = AgentSpecParser.EnforceClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enforceClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(AgentSpecParser.ENFORCE)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.enforcement()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 46137344) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AgentSpecParser.IDENTIFIER, 0)

        def STATE_CHANGE(self):
            return self.getToken(AgentSpecParser.STATE_CHANGE, 0)

        def BEFORE_ACTION(self):
            return self.getToken(AgentSpecParser.BEFORE_ACTION, 0)

        def AFTER_ACTION(self):
            return self.getToken(AgentSpecParser.AFTER_ACTION, 0)

        def FINISH(self):
            return self.getToken(AgentSpecParser.FINISH, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)




    def event(self):

        localctx = AgentSpecParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8086618112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KvPairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AgentSpecParser.STRING, 0)

        def COLON(self):
            return self.getToken(AgentSpecParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(AgentSpecParser.ValueContext,0)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_kvPair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKvPair" ):
                listener.enterKvPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKvPair" ):
                listener.exitKvPair(self)




    def kvPair(self):

        localctx = AgentSpecParser.KvPairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_kvPair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(AgentSpecParser.STRING)
            self.state = 68
            self.match(AgentSpecParser.COLON)
            self.state = 69
            self.value(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AgentSpecParser.STRING, 0)

        def number(self):
            return self.getTypedRuleContext(AgentSpecParser.NumberContext,0)


        def IDENTIFIER(self):
            return self.getToken(AgentSpecParser.IDENTIFIER, 0)

        def actionInvoke(self):
            return self.getTypedRuleContext(AgentSpecParser.ActionInvokeContext,0)


        def value(self):
            return self.getTypedRuleContext(AgentSpecParser.ValueContext,0)


        def LBRACK(self):
            return self.getToken(AgentSpecParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(AgentSpecParser.RBRACK, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)



    def value(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AgentSpecParser.ValueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_value, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.state = 72
                self.match(AgentSpecParser.STRING)
                pass
            elif token in [27, 28]:
                self.state = 73
                self.number()
                pass
            elif token in [25]:
                self.state = 74
                self.match(AgentSpecParser.IDENTIFIER)
                pass
            elif token in [22]:
                self.state = 75
                self.actionInvoke()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 84
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = AgentSpecParser.ValueContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_value)
                    self.state = 78
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 79
                    self.match(AgentSpecParser.LBRACK)
                    self.state = 80
                    self.match(AgentSpecParser.STRING)
                    self.state = 81
                    self.match(AgentSpecParser.RBRACK) 
                self.state = 86
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class EnforcementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENFORCEMENT(self):
            return self.getToken(AgentSpecParser.ENFORCEMENT, 0)

        def actionInvoke(self):
            return self.getTypedRuleContext(AgentSpecParser.ActionInvokeContext,0)


        def config(self):
            return self.getTypedRuleContext(AgentSpecParser.ConfigContext,0)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_enforcement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnforcement" ):
                listener.enterEnforcement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnforcement" ):
                listener.exitEnforcement(self)




    def enforcement(self):

        localctx = AgentSpecParser.EnforcementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enforcement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(AgentSpecParser.ENFORCEMENT)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.actionInvoke()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.config()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionInvokeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INVOKE(self):
            return self.getToken(AgentSpecParser.INVOKE, 0)

        def LPAREN(self):
            return self.getToken(AgentSpecParser.LPAREN, 0)

        def IDENTIFIER(self):
            return self.getToken(AgentSpecParser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AgentSpecParser.COMMA)
            else:
                return self.getToken(AgentSpecParser.COMMA, i)

        def LBRACE(self):
            return self.getToken(AgentSpecParser.LBRACE, 0)

        def kvPair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecParser.KvPairContext)
            else:
                return self.getTypedRuleContext(AgentSpecParser.KvPairContext,i)


        def RBRACE(self):
            return self.getToken(AgentSpecParser.RBRACE, 0)

        def RPAREN(self):
            return self.getToken(AgentSpecParser.RPAREN, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_actionInvoke

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionInvoke" ):
                listener.enterActionInvoke(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionInvoke" ):
                listener.exitActionInvoke(self)




    def actionInvoke(self):

        localctx = AgentSpecParser.ActionInvokeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_actionInvoke)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(AgentSpecParser.INVOKE)
            self.state = 93
            self.match(AgentSpecParser.LPAREN)
            self.state = 94
            self.match(AgentSpecParser.IDENTIFIER)
            self.state = 95
            self.match(AgentSpecParser.COMMA)
            self.state = 96
            self.match(AgentSpecParser.LBRACE)
            self.state = 97
            self.kvPair()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 98
                self.match(AgentSpecParser.COMMA)
                self.state = 99
                self.kvPair()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(AgentSpecParser.RBRACE)
            self.state = 106
            self.match(AgentSpecParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(AgentSpecParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(AgentSpecParser.FLOAT, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = AgentSpecParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not(_la==27 or _la==28):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(AgentSpecParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(AgentSpecParser.FALSE, 0)

        def NOT(self):
            return self.getToken(AgentSpecParser.NOT, 0)

        def predicate(self):
            return self.getTypedRuleContext(AgentSpecParser.PredicateContext,0)


        def PREDICATE(self):
            return self.getToken(AgentSpecParser.PREDICATE, 0)

        def predicate_func(self):
            return self.getTypedRuleContext(AgentSpecParser.Predicate_funcContext,0)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)




    def predicate(self):

        localctx = AgentSpecParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_predicate)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(AgentSpecParser.TRUE)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(AgentSpecParser.FALSE)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(AgentSpecParser.NOT)
                self.state = 113
                self.predicate()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(AgentSpecParser.PREDICATE)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.predicate_func()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AgentSpecParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(AgentSpecParser.LPAREN, 0)

        def number(self):
            return self.getTypedRuleContext(AgentSpecParser.NumberContext,0)


        def RPAREN(self):
            return self.getToken(AgentSpecParser.RPAREN, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_predicate_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate_func" ):
                listener.enterPredicate_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate_func" ):
                listener.exitPredicate_func(self)




    def predicate_func(self):

        localctx = AgentSpecParser.Predicate_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_predicate_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(AgentSpecParser.IDENTIFIER)
            self.state = 119
            self.match(AgentSpecParser.LPAREN)
            self.state = 120
            self.number()
            self.state = 121
            self.match(AgentSpecParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AgentSpecParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(AgentSpecParser.COLON, 0)

        def getRuleIndex(self):
            return AgentSpecParser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)




    def namespace(self):

        localctx = AgentSpecParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_namespace)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AgentSpecParser.IDENTIFIER)
            self.state = 124
            self.match(AgentSpecParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AgentSpecParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(AgentSpecParser.EQ, 0)

        def number(self):
            return self.getTypedRuleContext(AgentSpecParser.NumberContext,0)


        def namespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpecParser.NamespaceContext)
            else:
                return self.getTypedRuleContext(AgentSpecParser.NamespaceContext,i)


        def getRuleIndex(self):
            return AgentSpecParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)
